examples/test/testpolicy7970.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7970
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key0: value25
      key35: value30
      key21: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value47
          key38: value39
          key23: value29
      podSelector:
        matchLabels:
          key13: value22
          key24: value11
